# lab_13_1

./: CMakeLists.txt  run.sh
src/: main.cpp
src/extends/: dod.cpp  dod.h  sum.cpp  sum.h  var.cpp  var.h
test/: unittest.cpp
